[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art Assets/Old art/BossEnemy.png" type="Texture" id=1]
[ext_resource path="res://Art Assets/Old art/HPBarProgress.png" type="Texture" id=2]
[ext_resource path="res://Art Assets/Old art/HPBarUnder.png" type="Texture" id=3]
[ext_resource path="res://Art Assets/Old art/HPBarOver.png" type="Texture" id=4]
[ext_resource path="res://src/BossEnemy/BossEnemy.gd" type="Script" id=5]


[sub_resource type="CapsuleShape2D" id=1]
radius = 247.244
height = 426.045

[sub_resource type="CapsuleShape2D" id=2]
radius = 238.589
height = 439.381

[sub_resource type="CircleShape2D" id=3]
radius = 4010.66

[sub_resource type="Animation" id=4]
resource_name = "Awaken"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1200 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Death"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2880.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 0.1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "MoveAround"
length = 6.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5, 2.25, 3, 3.75, 4.5, 5.25, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 600 ), Vector2( -600, 600 ), Vector2( -600, 0 ), Vector2( 0, 0 ), Vector2( 600, 0 ), Vector2( 600, -600 ), Vector2( 0, -600 ), Vector2( 0, 0 ) ]
}

[node name="BossEnemy" type="Node2D"]
script = ExtResource( 5 )
maxHealth = 500.0

[node name="AniNode" type="Node2D" parent="."]
position = Vector2( 34.8899, 0.907816 )

[node name="Rotater" type="Node2D" parent="AniNode"]
position = Vector2( 0, -28 )

[node name="Sprite" type="Sprite" parent="AniNode"]
position = Vector2( 3.63798e-12, -15.749 )
scale = Vector2( 1.79233, 1.79233 )
z_index = 3
texture = ExtResource( 1 )

[node name="EnemyBody" type="KinematicBody2D" parent="AniNode"]

[node name="EnemyCollider" type="CollisionShape2D" parent="AniNode/EnemyBody"]
position = Vector2( 0, -57.5546 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="HealthBar" type="Control" parent="AniNode"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1315.53
margin_top = 567.588
margin_right = -1315.53
margin_bottom = 567.588
rect_scale = Vector2( 1.2, 0.6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HealthUnder" type="TextureProgress" parent="AniNode/HealthBar"]
anchor_right = 0.367188
anchor_bottom = 0.278333
margin_left = 419.404
margin_top = -1970.32
margin_right = 1769.41
margin_bottom = -1670.32
max_value = 500.0
value = 500.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.345098, 0.254902, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthOver" type="TextureProgress" parent="AniNode/HealthBar"]
anchor_right = 0.367188
anchor_bottom = 0.278333
margin_left = 415.404
margin_top = -1970.32
margin_right = 1765.41
margin_bottom = -1670.32
max_value = 500.0
value = 500.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.870588, 0.635294, 0.564706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="AniNode/HealthBar"]

[node name="ShootTimer" type="Timer" parent="AniNode"]
wait_time = 1.8
one_shot = true

[node name="NextStateTimer" type="Timer" parent="AniNode"]
wait_time = 5.0
one_shot = true

[node name="NormalEnemyArea" type="Area2D" parent="AniNode"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AniNode/NormalEnemyArea"]
position = Vector2( 0, -55.79 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="ShootRange" type="Area2D" parent="AniNode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AniNode/ShootRange"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AniNode"]
anims/Awaken = SubResource( 4 )
anims/Death = SubResource( 6 )
anims/MoveAround = SubResource( 5 )
[connection signal="body_entered" from="AniNode/NormalEnemyArea" to="." method="_on_NormalEnemyArea_body_entered"]
[connection signal="body_entered" from="AniNode/ShootRange" to="." method="_on_ShootRange_body_entered"]
[connection signal="body_exited" from="AniNode/ShootRange" to="." method="_on_ShootRange_body_exited"]
